[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/KeyBindingHeadNode.gd" type="Script" id=1]
[ext_resource path="res://Scripts/KeyBindingTree.gd" type="Script" id=2]

[node name="InputRemapper" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -375.0
margin_top = -250.0
margin_right = 375.0
margin_bottom = 290.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 750.0
margin_bottom = 534.0

[node name="Tree" type="Tree" parent="VBoxContainer"]
margin_right = 750.0
margin_bottom = 500.0
rect_min_size = Vector2( 750, 500 )
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3
hide_folding = true
hide_root = true
drop_mode_flags = 1
select_mode = 1
script = ExtResource( 2 )

[node name="Button" type="Button" parent="VBoxContainer"]
margin_top = 504.0
margin_right = 750.0
margin_bottom = 534.0
rect_min_size = Vector2( 0, 30 )
text = "Restore Defaults"

[node name="InputPrompt" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -50.0
margin_right = 250.0
margin_bottom = 50.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Label" type="Label" parent="InputPrompt"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -142.0
margin_top = -16.0
margin_right = 142.0
margin_bottom = 16.0
size_flags_vertical = 5
text = "Press the button you wish to add or remove."
align = 1
valign = 1
[connection signal="item_activated" from="VBoxContainer/Tree" to="." method="_on_Tree_item_activated"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="restore_defaults"]
